remap libs